--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,13 +24,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      id: downloadfile  # Remember to give an ID if you need the output
+      name: Download the file
+      with:
+        url: "https://github.com/petripaavola/Get-IntuneManagementExtensionDiagnostics/blob/main/Get-IntuneManagementExtensionDiagnostics.ps1"
+        target: public/
