--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,19 @@
-name: Scrape
+name: Download File Action
 
-on:
-  schedule:
-    - cron: "0 8 * * *" # 8 a.m. every day UTC
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  push_to_branch_and_create_pr:
-    name: Create a PR with the sound
-    if: "(contains(github.event.comment.body, ' pr ')) && ((contains(github.event.comment.author_association, 'OWNER') || contains(github.event.comment.user.login, 'librehsbot')) && (github.event.issue.number == 1))"
+  download-file:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      name: Check out current commit
-
-    - uses: actions/actions-download-file@v1
-      id: downloadfile
-      name: Download the file
-      with:
-          url: https://github.com/petripaavola/Get-IntuneManagementExtensionDiagnostics/blob/main/Get-IntuneManagementExtensionDiagnostics.ps1
-          target: assets
-        
+      - name: Download file
+        run: |
+          wget -O Get-IntuneManagementExtensionDiagnostics.ps1 https://raw.githubusercontent.com/petripaavola/Get-IntuneManagementExtensionDiagnostics/main/Get-IntuneManagementExtensionDiagnostics.ps1
+      - name: Commit changes
+        run: |
+          git config --global user.name 'Your Name'
+          git config --global user.email 'youremail@example.com'
+          git add Get-IntuneManagementExtensionDiagnostics.ps1
+          git commit -m "Add Get-IntuneManagementExtensionDiagnostics.ps1"
+          git push
     
